--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,34 @@
-.App {
+.App-header {
+  background-color: black;
+  height: 180px;
+  padding: 20px;
+  color: lightgrey;
+  font-family: sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
 .App-title {
+  font-size: 2em;
+}
+
+.Cereal-logo {
+  animation: spin infinite 10s linear;
+  height: 80px;
+  width: 80px;
+  padding: 10px;
+}
+
+.Result {
+  margin: 0;
+  padding: 4.5rem 2.5rem 1.5rem 17.5rem;
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
+.Result-button {
+  padding: 4.5rem 0rem 0rem 0rem;
 }
 
-@keyframes App-logo-spin {
+@keyframes spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
