--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App-header {
   background-color: black;
-  height: 180px;
+  height: 190px;
   padding: 20px;
-  color: lightgrey;
+  color: white;
   font-family: sans-serif;
   text-align: center;
 }
